Minor icon improvements... Go-Reload-Stop buttons are now 16px, same as other urlbar icons Reload and Stop icons for 16px are now improved (no longer looks stretched) Add small white line to page-livemarks.png Fix a noticeable green box in edit bookmark icon Small edits to permissions, search, and download icons

--- a/src/chrome/browser/moonscape/sub/BASE_Location_bar_combined_Go_Reload_Stop_button.css
+++ b/src/chrome/browser/moonscape/sub/BASE_Location_bar_combined_Go_Reload_Stop_button.css
@@ -14,27 +14,27 @@
 #go-button { padding: 0 3px !important; }
 
 #go-button,
-#urlbar-go-button { -moz-image-region: rect(0, 42px, 14px, 28px) !important; }
+#urlbar-go-button { -moz-image-region: rect(0, 48px, 16px, 32px) !important; }
 
 #go-button:hover,
-#urlbar-go-button:hover { -moz-image-region: rect(14px, 42px, 28px, 28px) !important; }
+#urlbar-go-button:hover { -moz-image-region: rect(16px, 48px, 32px, 32px) !important; }
 
 #go-button:hover:active,
-#urlbar-go-button:hover:active { -moz-image-region: rect(28px, 42px, 42px, 28px) !important; }
+#urlbar-go-button:hover:active { -moz-image-region: rect(32px, 48px, 48px, 32px) !important; }
 
 #go-button:-moz-locale-dir(rtl) > .toolbarbutton-icon,
 #urlbar-go-button:-moz-locale-dir(rtl) > .toolbarbutton-icon { transform: scaleX(-1) !important; }
 
-#urlbar-reload-button { -moz-image-region: rect(0, 14px, 14px, 0) !important; }
+#urlbar-reload-button { -moz-image-region: rect(0, 16px, 16px, 0) !important; }
 
-#urlbar-reload-button:not([disabled]):hover { -moz-image-region: rect(14px, 14px, 28px, 0) !important; }
+#urlbar-reload-button:not([disabled]):hover { -moz-image-region: rect(16px, 16px, 32px, 0) !important; }
 
-#urlbar-reload-button:not([disabled]):hover:active { -moz-image-region: rect(28px, 14px, 42px, 0) !important; }
+#urlbar-reload-button:not([disabled]):hover:active { -moz-image-region: rect(32px, 16px, 48px, 0) !important; }
 
 #urlbar-reload-button:-moz-locale-dir(rtl) > .toolbarbutton-icon { transform: scaleX(-1) !important; }
 
-#urlbar-stop-button {-moz-image-region: rect(0, 28px, 14px, 14px) !important; }
+#urlbar-stop-button {-moz-image-region: rect(0, 32px, 16px, 16px) !important; }
 
-#urlbar-stop-button:not([disabled]):hover {-moz-image-region: rect(14px, 28px, 28px, 14px) !important; }
+#urlbar-stop-button:not([disabled]):hover {-moz-image-region: rect(16px, 32px, 32px, 16px) !important; }
 
-#urlbar-stop-button:hover:active {-moz-image-region: rect(28px, 28px, 42px, 14px) !important; }
+#urlbar-stop-button:hover:active {-moz-image-region: rect(32px, 32px, 48px, 16px) !important; }
